fixed issue where game cannot fit on whole screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
   text-align: center;
   background-color: rgb(16, 21, 26);
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  border: 0;
 }
 
 
@@ -18,6 +22,13 @@ body {
 
 #canvas {
   background-color: rgb(16, 21, 26);
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
